fix(css): fix search overflow firefox
In 1.11 add min-width to the input to fix overflowing icons in Firefox.

Closes DCOS-40779

--- a/src/styles/components/form-elements/form-group/styles.less
+++ b/src/styles/components/form-elements/form-group/styles.less
@@ -35,16 +35,13 @@
         }
       }
     }
-  }
-
-  .health-tab {
 
     input {
       min-width: 0;
     }
 
-    .form-control-group-add-on:last-child {
-      font-size: 0;
+    .form-control-group-add-on .icon {
+      display: block;
     }
   }
 }
